--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <script type="text/javascript" src="script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Piazzolla:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <meta name="description" content="This website can determine ghost types from the evidence given.">
+        <meta name="keywords" content="Phasmophobia, Evidence, Determine">
+        <meta name="author" content="IliasHDZ">
     </head>
     <body>
         <div class="evi-list">
